feat(feat/new-feature): atomic PR workflow
- Branch: feat/new-feature
- PR tested: 1234566
- Rules validated: \u2705
- Atomic operations:  commit

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bun:pr": "bun run scripts/bun-pr-test.ts",
     "bun:pr-asan": "bun run scripts/bun-pr-test.ts --asan",
     "bun:pr-version": "bun run scripts/bun-pr-test.ts --version",
+    "atomic:pr": "bun run scripts/atomic-pr.js",
     "version": "bun run scripts/version-tracker.js",
     "version:check": "bun run scripts/version-tracker.js"
   },
