feat(dashboard): macro-forged header/footer with link validation
- Build-time version injection (v3.1.0)
- Pre-validated repo/issue/PR links (3/3 healthy)
- Git metadata (branch/commit/build time)
- WNCAAB-themed green gradient header (#80FF80)
- Zero runtime cost, static HTML generation
- Link validation script (build/validate-links.ts)
- All URLs include username: brendadeeznuts1111

Macro architecture:
- macros/dashboard-meta.ts - Build-time metadata & validation
- macros/header-macro.ts - Header component with live indicator
- macros/footer-macro.ts - Footer component with build info
- build/validate-links.ts - Pre-build link checker

BREAKING: Header/footer now generated at build time with validated links

--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "build:tension-states": "bun run build/tension-page-macro.ts",
     "build:tension-page": "bun run build/render-tension-page.ts",
     "build:tension": "bun run build:tension-states && bun run build:tension-page",
+    "build:validate-links": "bun run build/validate-links.ts",
+    "prebuild": "bun run build/validate-links.ts",
     "version": "bun run scripts/version-tracker.js",
     "version:check": "bun run scripts/version-tracker.js"
   },
