--- a/package.json
+++ b/package.json
@@ -67,8 +67,9 @@
     "build:tension-states": "bun run build/tension-page-macro.ts",
     "build:tension-page": "bun run build/render-tension-page.ts",
     "build:tension": "bun run build:tension-states && bun run build:tension-page",
+    "build:css-variables": "bun run build/generate-css-variables.ts",
     "build:validate-links": "bun run build/validate-links.ts",
-    "prebuild": "bun run build/validate-links.ts",
+    "prebuild": "bun run build:validate-links.ts && bun run build:css-variables",
     "version": "bun run scripts/version-tracker.js",
     "version:check": "bun run scripts/version-tracker.js"
   },
