feat(color-system): Add type-safe colors, palette visualizer, and dark mode
- Add ColorName type and getColor() for type-safe color access
- Add color palette visualizer HTML (public/color-palette.html)
- Add dark mode support via prefers-color-scheme media query
- Add dev:colors script (opens palette in browser)
- Add validate:colors script (quick validation)
- Update prebuild to include color validation

Features:
- Type-safe: getColor('primary') ✅, getColor('primry') ❌ TS error
- Visual palette: Click colors to copy hex values
- Dark mode: Automatically respects system preference
- Developer scripts: bun run dev:colors, bun run validate:colors

Dark Mode:
- Inverts background/text colors
- Uses darker primary for better contrast
- Respects prefers-color-scheme: dark

--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "build:tension": "bun run build:tension-states && bun run build:tension-page",
     "build:css-variables": "bun run build/generate-css-variables.ts",
     "build:validate-links": "bun run build/validate-links.ts",
-    "prebuild": "bun run build:validate-links.ts && bun run build:css-variables",
+    "dev:colors": "bun run build:css-variables && open public/color-palette.html",
+    "validate:colors": "bun -e \"import './macros/color-macro.ts'; console.log('✅ All colors validated')\"",
+    "prebuild": "bun run validate:colors && bun run build:validate-links.ts && bun run build:css-variables",
     "version": "bun run scripts/version-tracker.js",
     "version:check": "bun run scripts/version-tracker.js"
   },
