feat(color-monitoring): Implement complete usage tracking and monitoring system
- Add USAGE_TRACKER to macros/color-macro.ts (tracks getColor() calls)
- Add generateColorReport() function with detailed analytics
- Update build script to show usage report after CSS generation
- Create scripts/color-audit.ts for weekly detailed audits
- Add GitHub Actions workflow for CI/CD color validation
- Add pre-commit hook for local validation
- Integrate color stats into dev server dashboard
- Add new npm scripts: monitor:colors, audit:colors, health:colors, weekly-audit

Features:
- Automatic usage tracking (no manual instrumentation)
- Build-time analysis (zero runtime overhead)
- Bundle bloat detection (identifies unused colors)
- CI/CD integration (validates on every PR)
- Dashboard integration (visual stats in dev server)
- Pre-commit validation (catches issues before commit)

Monitoring:
- Daily: bun run monitor:colors
- Weekly: bun run audit:colors
- Before deploy: bun run health:colors
- CI/CD: GitHub Actions validates automatically

--- a/package.json
+++ b/package.json
@@ -70,8 +70,12 @@
     "build:css-variables": "bun run build/generate-css-variables.ts",
     "build:validate-links": "bun run build/validate-links.ts",
     "dev:colors": "bun run build:css-variables && open public/color-palette.html",
-    "validate:colors": "bun -e \"import './macros/color-macro.ts'; console.log('✅ All colors validated')\"",
-    "prebuild": "bun run validate:colors && bun run build:validate-links.ts && bun run build:css-variables",
+    "validate:colors": "bun -e \"import './macros/color-macro.ts'; import { generateColorReport } from './macros/color-macro.ts'; generateColorReport(); console.log('✅ Color system validation complete')\"",
+    "monitor:colors": "bun run validate:colors",
+    "audit:colors": "bun run scripts/color-audit.ts",
+    "health:colors": "bun run validate:colors && bun run build:css-variables",
+    "weekly-audit": "bun run audit:colors && bun run build:css-variables",
+    "prebuild": "bun run health:colors && bun run build:validate-links.ts",
     "version": "bun run scripts/version-tracker.js",
     "version:check": "bun run scripts/version-tracker.js"
   },
