feat(TES-PERF-001.8/001.9): Worker error handling, resilience, and event loop monitoring
- Implement worker.onerror and worker.addEventListener('error') handlers
- Add automatic respawn with exponential backoff (1s → 60s max)
- Implement graceful shutdown with registerShutdownHandler()
- Add event loop monitoring using Bun.nanoseconds() (not Bun.peek())
- Detect long ticks (>16ms) with health scoring (green/yellow/red)
- Add /api/dev/event-loop endpoint for metrics
- Enhance unhandled rejection logging with metadata tags
- Add process.on handlers for SIGTERM, SIGINT, uncaughtException
- Create load test script (perf-storm.ts) for resilience validation
- Add comprehensive API reference documentation

References:
- process.on('unhandledRejection'): https://nodejs.org/api/process.html#event-unhandledrejection
- process.on('uncaughtException'): https://nodejs.org/api/process.html#event-uncaughtexception
- process.on('SIGTERM'): https://nodejs.org/api/process.html#event-sigterm
- process.on('SIGINT'): https://nodejs.org/api/process.html#event-sigint
- worker.terminate(): https://developer.mozilla.org/en-US/docs/Web/API/Worker/terminate
- Bun.sleep(): https://bun.sh/docs/runtime/bun-apis#sleep--timing

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,7 +1,19 @@
-# bunfig.toml - Remote Index v14.2
+# bunfig.toml - BUN Macro Core v1.4 + Remote Index v14.2
 
 # Bun v1.3.2 Immunity: Explicit linker/auto config for breaking change protection
 [IMMUNITY:hoisted-disable] # Grepable: immunity-hoisted-disable
+
+[build]
+# Enable macro processing (Bun 1.4+)
+macros = true
+# External dependencies (no vendor lock-in)
+external = ["bun:fetch"]
+# Trust Cloudflare KV and Bun crypto APIs for P88-PandBet high-value feeds
+trust = ["cloudflare:kv", "bun:crypto", "bun:array", "bun:fetch"]
+
+[minify]
+# Enable syntax minification for DCE post-inlining
+syntax = true
 
 [remote]
 # Remote index URL (must be HTTPS)
