--- a/package.json
+++ b/package.json
@@ -1,7 +1,50 @@
 {
   "name": "wncaab-perf-v3.1",
   "version": "3.1.0",
-  "description": "WNCAAB Performance Visualization v3.1 - Grep-first metrics with schema validation",
+  "description": "High-performance Bun-native dev server with type-safe APIs, comprehensive documentation, and zero-dependency architecture. Features grep-first metrics, schema validation, remote index distribution, and AI-powered immunity.",
+  "keywords": [
+    "bun",
+    "bun-runtime",
+    "typescript",
+    "performance",
+    "dev-server",
+    "api",
+    "dashboard",
+    "type-safety",
+    "zero-dependencies",
+    "high-performance",
+    "http-server",
+    "routing",
+    "metrics",
+    "telemetry",
+    "worker",
+    "sharedmap",
+    "html-escaping",
+    "string-width",
+    "unicode",
+    "emoji",
+    "validation",
+    "schema-validation",
+    "grep",
+    "indexing",
+    "ai-immunity",
+    "tension-mapping",
+    "color-system",
+    "web-socket",
+    "real-time",
+    "hmr",
+    "hot-reload",
+    "etag",
+    "caching",
+    "optimization",
+    "benchmark",
+    "native-apis",
+    "simd",
+    "zero-copy",
+    "atomic-operations"
+  ],
+  "author": "WNCAAB Syndicate <https://github.com/brendadeeznuts1111>",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/brendadeeznuts1111/wncaab-perf-v3.1.git"
@@ -10,6 +53,23 @@
   "bugs": {
     "url": "https://github.com/brendadeeznuts1111/wncaab-perf-v3.1/issues"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/brendadeeznuts1111"
+  },
+  "main": "scripts/dev-server.ts",
+  "type": "module",
+  "files": [
+    "scripts/**/*",
+    "lib/**/*",
+    "macros/**/*",
+    "docs/**/*",
+    "templates/**/*",
+    "types/**/*",
+    "*.md",
+    "*.toml",
+    "*.yaml"
+  ],
   "scripts": {
     "rules:config": "bun run scripts/rules-config.js",
     "rules:pr": "bun run scripts/rules-pr.js",
@@ -76,8 +136,46 @@
     "health:colors": "bun run validate:colors && bun run build:css-variables",
     "weekly-audit": "bun run audit:colors && bun run build:css-variables",
     "prebuild": "bun run health:colors && bun run build:validate-links.ts",
-    "version": "bun run scripts/version-tracker.js",
-    "version:check": "bun run scripts/version-tracker.js"
+    "grep:api-routes": "bun run scripts/grep-api-routes.ts",
+    "grep:validate-bun": "bun run scripts/grep-validate-bun.ts",
+    "grep:perf-audit": "bun run scripts/grep-perf-audit.ts",
+    "grep:generate-tags": "bun run scripts/grep-generate-tags.ts",
+    "validate:routes": "bun run scripts/validate-routes.ts",
+    "validate:all": "bun run validate:colors && bun run validate:routes && echo '✅ All validations passed'",
+    "version": "bun run scripts/version-manager.ts",
+    "version:check": "bun run scripts/version-manager.ts",
+    "version:patch": "bun run scripts/version-manager.ts patch",
+    "version:minor": "bun run scripts/version-manager.ts minor",
+    "version:major": "bun run scripts/version-manager.ts major",
+    "version:prerelease": "bun run scripts/version-manager.ts prerelease --preid beta",
+    "version:set": "bun run scripts/version-manager.ts",
+    "grep:macros": "rg --type ts '\\[macro.*\\]' --colors match:fg:yellow:style:bold",
+    "grep:async": "rg '\\[MACRO:async\\]' --type ts --files-with-matches",
+    "grep:macro-imports": "rg 'with \\{ type: \"macro\" \\}' --type ts --colors match:fg:cyan:style:bold",
+    "grep:by-path": "rg --type ts",
+    "index:macros": "rg --files-with-matches --no-messages '\\[MACRO:.*\\]' > .macro.index && echo '🟢 Macro Index built!'",
+    "validate:macros": "bun run scripts/validate-macros.js",
+    "build:config": "bun -e \"import { readFileSync } from 'fs'; const config = readFileSync('bunfig.toml', 'utf-8'); console.log('✅ bunfig.toml loaded'); console.log(config.match(/\\[build\\][\\s\\S]*?\\[\\w+\\]/)?.[0] || 'No [build] section found')\"",
+    "build:validate": "bun run validate:macros && echo '✅ Macro validation complete'",
+    "build:pr": "bun run scripts/atomic-pr.js MACRO-SYSTEM",
+    "build:macro": "bun build ./app.ts --outdir dist --minify",
+    "macro:build": "bun run scripts/build-macros.ts",
+    "macro:test": "bun test __tests__/macros/colors.macro.test.ts",
+    "macro:validate": "bun run macro:build && bun run macro:test",
+    "bet:config": "bun -e \"import { readFileSync } from 'fs'; const yaml = await import('js-yaml'); const config = yaml.default.load(readFileSync('wagering.yaml', 'utf-8')); console.log('✅ wagering.yaml loaded'); console.log(JSON.stringify(config.wagering.lifecycle.schema, null, 2))\"",
+    "bet:analyze": "bun run scripts/analyze.js",
+    "hunt:edges": "rg --type yaml '\\[.*\\]\\[.*\\]\\[.*\\]\\[.*\\]\\[.*\\]' --color=always",
+    "hunt:props": "rg '\\[PROPS\\-[A-Z]+\\]' --type yaml --files-with-matches",
+    "hunt:by-risk": "rg '\\[EDGE\\-[A-Z]+\\]' --type yaml --no-heading",
+    "index:edges": "rg --files-with-matches --no-messages '\\[EDGE:.*\\]' > .edges.index && echo '🟢 Edge Index built!'",
+    "bet:pr": "bun run scripts/atomic-pr.js WAGER-LIFECYCLE",
+    "preflight:confirm": "bun run scripts/preflight-confirm.ts",
+    "cleanup:full": "bun run scripts/cleanup-full.ts",
+    "test:suite": "bun run scripts/test-suite.ts",
+    "perf:storm": "bun run scripts/perf-storm.ts",
+    "check:infra": "bun run scripts/check-infra.ts",
+    "infra:audit": "bun run scripts/infra-audit.ts",
+    "generate-release-notes": "bun run scripts/generate-release-notes.ts"
   },
   "devDependencies": {
     "js-yaml": "^4.1.0"
@@ -91,4 +189,3 @@
   "bunReleaseNotes": "BUN-RELEASE-NOTES-ENHANCED.md",
   "changelog": "CHANGELOG.md"
 }
-
